# pp-citation-gen

./: .gitignore  Cargo.toml  readme.md
data/: barcode.aseprite
pp-citation-gen/: Cargo.toml
pp-citation-gen/src/: main.rs
pp-citation-lib/: Cargo.toml
pp-citation-lib/data/: stamp.aseprite
pp-citation-lib/src/: colour.rs  lib.rs
src/: main.rs
