[package]
name = "pp-citation-lib"
version = "0.2.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.26"
anyhow = "1.0.86"
image = "0.25"
imageproc = "0.25"
csscolorparser = { version = "0.6", optional = true}
# If another version is needed, either edit or do a patch.
poise = {git = "https://github.com/serenity-rs/poise", optional = true}
async-trait = {version = "0.1", optional = true}

[features]
default = ["parse"]
parse = ["dep:csscolorparser"]
# For a discord bot which generates these citations, implements the SlashArgument trait from poise. Just so that I dont need to do like 7 newtype wrappers.
serenity = ["parse", "dep:poise", "dep:async-trait"]